# hs-brotli

./: .gitignore  README.md  brotli.cabal  stack.yaml
brotli/: brotli.cabal  hs-brotli.cabal
brotli-conduit/: README.md  brotli-conduit.cabal
brotli-conduit/src/Data/Conduit/: Brotli.hs
brotli/src/Codec/Compression/: Brotli.hs
brotli/src/Codec/Compression/Brotli/: Internal.hs
brotli/test/: Spec.hs
docs/: CODE_OF_CONDUCT.md
pipes-brotli/: README.md  pipes-brotli.cabal
pipes-brotli/src/Pipes/: Brotli.hs
src/Codec/Compression/: Brotli.hs
src/Codec/Compression/Brotli/: Internal.hs
streaming-brotli/: LICENSE  README.md  streaming-brotli.cabal
test/: Spec.hs
wai-middleware-brotli/: stack.yaml  wai-middleware-brotli.cabal
wai-middleware-brotli/app/: Main.hs
wai-middleware-brotli/src/Network/Wai/Middleware/: Brotli.hs
wai-middleware-brotli/test/: Spec.hs  words.br
