name:                wai-middleware-brotli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iand675/wai-middleware-brotli#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
copyright:           Ian Duncan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.Brotli
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , http-types
                     , brotli
                     , bytestring
                     , directory
                     , filepath
                     , binary
                     , unix
  default-language:    Haskell2010

executable wai-middleware-brotli-server
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , http-types
                     , warp
                     , wai-extra
                     , wai-middleware-brotli
                     , wai
                     , wai-app-static

test-suite wai-middleware-brotli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , brotli
                     , wai-middleware-brotli
                     , warp
                     , wai
                     , bytestring
                     , http-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iand675/wai-middleware-brotli
